# dots

./: .gitignore  README.md  builders.nix  configuration.nix  dirs.nix  extraPkgs.nix  flake.bak  flake.nix  flakelightCompat.nix  hardware-configuration.nix  home.nix  hosts.nix  lib.nix  libs.nix  mkConfigs.nix  mkSystem.nix  oldCompat.nix  secrets.nix
asdasd/: default.nix
hosts/: base.nix  common.nix  commonSoftware.nix  default.nix  keybinds.nix  nixBase.nix  restic.nix  secrets.nix  xdgDirs.nix
lib/: builders.nix  default.nix  modules.nix  options.nix  paths.nix  strings.nix  utils.nix
libs/: filesystem.nix  options.nix  packages.nix  strings.nix
modules/: autologin.nix  base.nix  bitwarden.nix  boot-customization.nix  boot-windows.nix  boot.nix  catppuccin.nix  common-base.nix  copyq.nix  dconf-diff.nix  dconf.nix  default-programs.nix  defaults.nix  direnv.nix  discord.nix  docker.nix  firefox.nix  fonts.nix  git.nix  gnome-circles.nix  gnome.nix  hm.nix  kdeconnect.nix  music.nix  musnix.nix  neofetch.nix  nix-utils.nix  nx.nix  obsidian.nix  pinKernel.nix  qmk.nix  quickPatches.nix  secrets.nix  snip.nix  steam.nix  syncedPaths.nix  syncthing-common.nix  syncthing.nix  terminal-utils.nix  translator.nix  (+4 more)
nixosConfigurations/: default.nix  hosts.nix
nixosModules/: base.nix  default.nix  fonts.nix  keys.nix  secrets.nix  user.nix
old/: hosts.nix  libs.nix
overlays/: home_manager.nix
profiles/: agenix.nix  base.nix  pc.nix  wifi.nix
scripts/: boot-windows.sh  dconf-diff.sh  extract.sh  fuck.sh  q.sh  (+4 more)
templates/python/: flake.nix  pyproject.toml
(+869 files in other folders)
