[tool.poetry]
authors     = ["Your Name <you@example.com>"]
description = ""
license     = "MIT"
name        = "app"
readme      = "README.md"
version     = "0.1.0"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
build-backend = "poetry.core.masonry.api"
requires      = ["poetry-core"]
